added some categories

--- a/skill-exchange/src/styles/loggedInPages/Dashboard.scss
+++ b/skill-exchange/src/styles/loggedInPages/Dashboard.scss
@@ -1,20 +1,34 @@
 @import '../variables.scss';
 
-.home {
+.logged-in {
     .header {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: $spacing-md;
+        padding: $spacing-md $spacing-xxl;
         .logo {
             font-size: 24px;
             font-weight: bold;
             color: $primary-color; // Use your primary color
+            padding: 0;
+        }
+
+        .left {
+            display: flex;
+            align-items: center;
+            gap: $spacing-lg;
+        }
+
+        .right {
+            display: flex;
+            align-items: center;
+            gap: $spacing-lg;
         }
 
         .nav {
             display: flex;
-            gap: $spacing-lg;
+            gap: $spacing-md;
+            align-items: center;
 
             .nav-link {
                 text-decoration: none;
@@ -30,7 +44,7 @@
         .premium {
             .premium-link {
                 text-decoration: none;
-                color: $primary-color; // Use your primary color
+                color: $color-primary-dark; // Use your primary color
                 font-weight: bold;
 
                 &:hover {
@@ -67,8 +81,7 @@
     }
 
     .main-content {
-        padding: $spacing-lg;
-        text-align: center;
+        padding: $spacing-lg $spacing-xxl $spacing-xxl;
 
         h1 {
             font-size: 32px;
