--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -14,6 +14,7 @@ $color-background: #f7f7f7;
 $color-text: rgb(72 72 72);
 $color-card-background: #ffffff;
 $color-border: #ebebeb;
+$color-input: #767776;
 $color-hover: #0c4ca9d4;
 $dark: #151522;
 $white: #fff; 
