--- a/skill-exchange/src/styles/components/Card.scss
+++ b/skill-exchange/src/styles/components/Card.scss
@@ -10,7 +10,8 @@
       color: $color-text;
       display: flex;
       flex-direction: column;
-  
+      transition: box-shadow 0.3s ease;
+
       &:hover {
         outline: none;
         box-shadow: 0 3px 6px rgba(0, 0, 0, .15);
@@ -55,6 +56,22 @@
       &__location {
         padding: 0 $spacing-sm; // Reduce padding to save space
         font-size: $font-size-small; // Compact location text
+        display: flex;
+        align-items: center; // Align items vertically
+
+        .card__chevron {
+            margin-left: auto; // Push the chevron to the right
+            color: $color-primary-dark;
+            font-size: 20px;
+            opacity: 0; // Initially hidden
+            transition: opacity 0.3s ease; // Smooth fade-in and fade-out
+            pointer-events: none; // Disable interactions when invisible
+          }
+  
+          .card__chevron.visible {
+            opacity: 1; // Fully visible on hover
+            pointer-events: auto; // Enable interactions
+          }
       }
   
       &__skills {
@@ -89,5 +106,11 @@
         }
       }
     }
-  }
+
+    .card:hover {
+      .card__location .card__chevron {
+        opacity: 1;
+      }
+    }
+}
   
