--- a/skill-exchange/src/styles/loggedInPages/Dashboard.scss
+++ b/skill-exchange/src/styles/loggedInPages/Dashboard.scss
@@ -2,6 +2,7 @@
 
 .logged-in {
     .header {
+        position: relative;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 6px 0px;
         border: 2px solid $color-border;
         display: flex;
