added Done button to form

--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -19,6 +19,8 @@ $color-hover: #0c4ca9d4;
 $dark: #151522;
 $white: #fff; 
 $black: #000;
+$success-border: #368f24;
+$success-background: #29b551;
 
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
