--- a/skill-exchange/src/styles/loggedInPages/Profile.scss
+++ b/skill-exchange/src/styles/loggedInPages/Profile.scss
@@ -259,4 +259,41 @@
       }
     }
   }
+
+  .btn-submitted-container {
+    text-align: center;
+    @keyframes fadeInIcon {
+      0% {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .btn-submitted {
+      padding: $spacing-md;
+      min-width: 120px;
+      font-weight: 600;
+      text-align: center;
+      background-color: $success-background; // Background color for signup button
+      color: $white; // White text for signup button
+      border: 2px solid $success-border; // Border color matching background
+      cursor: pointer;
+      border-radius: $border-radius;
+      position: relative;
+
+      .input-icon {
+        opacity: 0; // Start hidden
+        animation: fadeInIcon 0.4s ease-in 0.2s forwards; 
+      }
+    }
+    .btn-submitted-text {
+      margin-right: $spacing-md;
+    }
+    
+  }
+
   
