added more structured flow for form profile submission

--- a/skill-exchange/src/styles/components/ScheduleMeetingForm.scss
+++ b/skill-exchange/src/styles/components/ScheduleMeetingForm.scss
@@ -13,7 +13,7 @@
         display: block;
         font-size: $font-size-medium;
         font-weight: 600;
-        margin-bottom: $spacing-lg;
+        margin-bottom: $spacing-sm;
       }
   
       input[type="date"],
@@ -24,6 +24,69 @@
         margin-bottom: $spacing-md;
         border-radius: $border-radius;
         border: 2px solid $color-border;
+      }
+
+      .google-pay-icon {
+        font-size: 30px;
+      }
+
+      .pay-button {
+        width: 100%;
+        cursor: pointer;
+        padding: $spacing-sm;
+        font-size: $font-size-small;
+        margin-bottom: $spacing-md;
+        border-radius: 50px;
+        border: 2px solid transparent;
+      }
+
+      .google-pay-button {
+        background-color: $black;
+        color: $white;
+      }
+
+      .paypal-pay-button {
+        background-color: rgb(255 196 58);;
+        color: $color-primary-dark;
+      }
+
+      .paypal-pay-button-text-container {
+        display: flex;
+        gap: $spacing-sm;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .credit-card-form {
+        margin-bottom: $spacing-lg;
+        .form-group {
+          position: relative;
+          margin-bottom: $spacing-sm; // Ensure $spacing-md is defined
+
+          input {
+            width: 100%;
+            padding: $spacing-sm; // Ensure $spacing-sm is defined
+            padding-left: $spacing-lg; // Increased left padding for icon
+            border: 1px solid $color-border; // Ensure $color-border is defined
+            border-radius: $border-radius; // Ensure $border-radius is defined
+            font-size: $font-size-medium; // Ensure $font-size-medium is defined
+            transition: border-color $transition-speed ease; // Use $transition-speed
+            box-sizing: border-box; // Added to include padding in width calculation
+
+            &:focus {
+              outline: none;
+              border-color: $primary-color; // Ensure $primary-color is defined
+            }
+          }
+
+        .half-width {
+          display: inline-flex;
+          gap: $spacing-md;
+          width: 50%;
+        }
+      }
+
+    
       }
     }
   }
