refined categoriess page

--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -14,6 +14,8 @@ $color-background: #f7f7f7;
 $color-text: rgb(72 72 72);
 $color-card-background: #ffffff;
 $color-border: #ebebeb;
+$light-grey: #f8f8f8;
+$dark-grey: #cbcbcb;
 $color-input: #767776;
 $color-hover: #0c4ca9d4;
 $dark: #151522;
@@ -25,7 +27,7 @@ $success-background: #29b551;
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
 $font-size-medium: 18px; /* Medium font size */
-$font-size-large: 20px; /* Large font size */
+$font-size-large: 24px; /* Large font size */
 $font-size-heading: 36px; /* Heading font size */
 $font-size-xxl: 48px;
 
