--- a/skill-exchange/src/styles/components/MacroCategory.scss
+++ b/skill-exchange/src/styles/components/MacroCategory.scss
@@ -1,106 +1,129 @@
 @import '../variables.scss';
 
 .macrocategory {
-    background-color: $color-border;
-    padding: $spacing-lg;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow;
-    text-align: center;
-  
-    .macrocategory-header {
-      margin-bottom: $spacing-lg;
-  
-      .macrocategory-heading {
-        font-family: $font-family-heading;
-        font-size: $font-size-xxl;
-        color: $primary-color;
-        margin-bottom: $spacing-sm;
-      }
-  
-      .macrocategory-description {
-        font-family: $font-family-text;
-        font-size: $font-size-medium;
-        color: $color-text;
-        margin-bottom: $spacing-md;
-      }
-  
-      .macrocategory-button {
-        font-family: $font-family-text;
-        font-size: $font-size-medium;
-        color: $white;
-        background-color: $primary-color;
-        border: none;
-        padding: $spacing-sm $spacing-md;
-        border-radius: $border-radius;
-        cursor: pointer;
-        transition: background-color $transition-speed;
-  
-        &:hover {
-          background-color: $color-hover;
-        }
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-lg;
+  padding: $spacing-lg 0;
+  margin-bottom: $spacing-md;
+  border-bottom: 2px solid $color-border;
+
+  &--container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+
+    .macrocategory-heading {
+      display: inline-flex;
+      font-family: $font-family-heading;
+      font-size: $font-size-large;
+      font-weight: 700;
+      margin: 0;
+      margin-right: $spacing-md;
+      flex: 1;
+      color: $color-primary-dark;
+
+      &__icon {
+        font-size: $font-size-large
       }
     }
-  
-    .macrocategory-carousel {
+
+    .macrocategory-description {
+      flex: 1;
+      font-family: $font-family-text;
+      font-size: $font-size-medium;
+      margin: $spacing-sm 0 0;
+      color: $color-text;
+    }
+  }
+
+  .macrocategory-button {
+    align-self: flex-start;
+    font-weight: 600;
+    background-color: $color-card-background; // Background color for login button
+    border: 2px solid $color-border; // Light border for login button
+    border-radius: $border-radius;
+    padding: $spacing-sm $spacing-md;
+    font-family: $font-family-text;
+    font-size: $font-size-medium;
+    cursor: pointer;
+    transition: background-color $transition-speed;
+
+    &:hover {
+      border: 2px solid $black;
+    }
+  }
+
+  &-carousel {
+    display: flex;
+    align-items: center;
+    gap: $spacing-md;
+    padding: $spacing-lg $spacing-md;
+    background-color: $light-grey;
+    border-radius: $border-radius;
+
+    .carousel-arrow {
+      background: $get-started-bg;
+      border: none;
+      border-radius: 50%;
+      width: 2rem;
+      height: 2rem;
       display: flex;
+      justify-content: center;
       align-items: center;
-      position: relative;
-  
-      .carousel-arrow {
-        background-color: $white;
-        border: 1px solid $color-border;
-        color: $color-text;
-        padding: $spacing-sm;
-        font-size: $font-size-large;
-        border-radius: 50%;
-        cursor: pointer;
-        transition: background-color $transition-speed;
-  
-        &:hover {
-          background-color: $color-hover;
-          color: $white;
-        }
-  
-        &.left-arrow {
-          margin-right: $spacing-sm;
-        }
-  
-        &.right-arrow {
-          margin-left: $spacing-sm;
-        }
+      font-family: $font-family-text;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $color-hover;
+        color: $white;
       }
-  
-      .carousel-track {
+    }
+
+    .carousel-track {
+      display: flex;
+      overflow-x: auto;
+      gap: $spacing-md;
+      padding: $spacing-md;
+      scroll-behavior: smooth;
+
+      .carousel-card {
         display: flex;
-        overflow-x: auto;
-        gap: $spacing-md;
-        padding: $spacing-sm 0;
-        scroll-behavior: smooth;
-  
-        .carousel-card {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          background-color: $color-background;
-          border: 1px solid $color-border;
-          border-radius: $border-radius;
-          padding: $spacing-md;
-          min-width: 120px;
-          box-shadow: $box-shadow;
-          text-align: center;
-  
-          .card-icon {
-            font-size: $font-size-xxl;
-            margin-bottom: $spacing-sm;
-          }
-  
-          .card-label {
-            font-family: $font-family-text;
-            font-size: $font-size-medium;
-            color: $font-color;
-          }
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: $spacing-md;
+        background-color: $color-card-background;
+        border: 1px solid $color-border;
+        border-radius: $border-radius;
+        min-width: 120px;
+        box-shadow: 0px 4px 0px 1px $color-border;
+        cursor: pointer;
+
+        &:hover {
+          box-shadow: 0px 4px 0px 1px $dark-grey;
+          border: 1px solid $dark-grey;
+        }
+
+        .card-icon {
+          font-size: $font-size-large;
+          margin-bottom: $spacing-sm;
+          color: $primary-color;
+        }
+
+        .card-label {
+          font-family: $font-family-text;
+          font-size: $font-size-medium;
+          color: $color-text;
         }
       }
     }
   }
-  
+}
