--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -24,6 +24,14 @@ $black: #000;
 $success-border: #368f24;
 $success-background: #29b551;
 
+/* Categories colors */
+$icon-purple: #6b2ecd;
+$icon-orange: #e37916;
+$icon-yellow: #f0ba17;
+$icon-blue: #223c9d;
+$icon-green: #0f8c30;
+$icon-red: #e22002;
+
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
 $font-size-medium: 18px; /* Medium font size */
