--- a/skill-exchange/src/styles/components/MacroCategory.scss
+++ b/skill-exchange/src/styles/components/MacroCategory.scss
@@ -129,6 +129,7 @@
         border-radius: $border-radius;
         min-width: 120px;
         box-shadow: 0px 4px 0px 1px $color-border;
+        text-decoration: none;
         cursor: pointer;
 
         &:hover {
