--- a/skill-exchange/src/styles/loggedInPages/SubCategory.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategory.scss
@@ -1,10 +1,10 @@
 @import '../variables.scss';
 
-.subcategory-icon-container {
+.hero-banner {
     margin: 0 auto;
     text-align: center;
 
-    svg {
+    img {
         width: 60%;
     }
     
